--- a/csm.html
+++ b/csm.html
@@ -5,7 +5,7 @@
     <body>
         <h3>Computer science is the study of computation and its applications, using mathematics, logic, and programming languages.
             Machine learning is a subfield of computer science that focuses on creating systems that can learn from data and make predictions or decisions.
-            Machine learning uses various techniques, such as neural networks, deep learning, and reinforcement learning, to achieve its goals. hi
+            Machine learning uses various techniques, such as neural networks, deep learning, and reinforcement learning, to achieve its goals.
         </h3>
         go home<a href="index.html">clck here</a>
     </body>
