--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 	<iframe width="560" height="315" src="https://www.youtube.com/embed/qrvK_KuIeJk?si=s5Hmk-vsm03Fq7q7" title="YouTube video 	player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-	share" allowfullscreen></iframe>
 	</p>
 	<p>
-	about csm <button><a href="csm.html">click here</a></button>
+	about csm<a href="csm.html"><button>click here</a></button>
 	</p>
 	<p>
 	see more about AI<a href="ai.html">click here</a>
