--- a/ai.html
+++ b/ai.html
@@ -33,6 +33,6 @@
             Artificial Intelligence (AI) refers to the simulation of human intelligence in machines that are programmed to think and learn. It involves the development of algorithms and models that enable computers to perform tasks that typically require human intelligence, such as visual perception, speech recognition, decision-making, and language translation.
         </p>
     </section>
-	to go home<a href="index.html">click here</a>
+	to go home<button><a href="index.html">click here</button></a>
 </body>
 </html>
