--- a/csm.html
+++ b/csm.html
@@ -8,7 +8,7 @@
 	Machine learning uses various techniques, such as neural networks, deep learning, and reinforcement learning, to achieve its 	goals.
 	</h3>
 	<p>
-	go home<a href="index.html">clck here</a>
+	go home<button><a href="index.html">clck here</a></button>
 	</p>
 	</body>
 </html>
