--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 	about csm<a href="csm.html"><button>click here</a></button>
 	</p>
 	<p>
-	see more about AI<a href="ai.html">click here</a>
+	see more about AI<a href="ai.html"><button>click here</button></a>
 	</p>
 	</body>
 </html>
