--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 	<iframe width="560" height="315" src="https://www.youtube.com/embed/qrvK_KuIeJk?si=s5Hmk-vsm03Fq7q7" title="YouTube video 	player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-	share" allowfullscreen></iframe>
 	</p>
 	<p>
-	<img width=50% src="ai.JPG">
+	<img width=50% src="ai.jpg">
 	</p>
 	<p>
 	about csm<a href="csm.html"><button>click here</a></button>
