--- a/ai.html
+++ b/ai.html
@@ -34,5 +34,8 @@
         </p>
     </section>
 	to go home<button><a href="index.html">click here</button></a>
+    <p>
+        <a href="place.html">click here</a>
+    </p>
 </body>
 </html>
